# rocket-league-zoo-sim

./: .gitignore  README.md  example.py  example_selfplay.py  pyproject.toml  test.py
rlzoo_sim/: __init__.py  env.py
rlzoo_sim/envs/: match.py
rlzoo_sim/simulator/: player.py  rocket_sim_game.py
rlzoo_sim/utils/action_parsers/: action_parser.py  continuous_act.py  default_act.py  discrete_act.py
rlzoo_sim/utils/gamestates/: game_state.py  physics_object.py  player_data.py
rlzoo_sim/utils/obs_builders/: advanced_obs.py  default_obs.py  obs_builder.py
rlzoo_sim/utils/reward_functions/: combined_reward.py  default_reward.py  reward_function.py
rlzoo_sim/utils/reward_functions/common_rewards/: ball_goal_rewards.py  conditional_rewards.py  misc_rewards.py  player_ball_rewards.py
rlzoo_sim/utils/state_setters/: default_state.py  random_state.py  state_setter.py
rlzoo_sim/utils/state_setters/wrappers/: car_wrapper.py  physics_wrapper.py  state_wrapper.py
rlzoo_sim/utils/terminal_conditions/: common_conditions.py  terminal_condition.py
